<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/prevent_soft_name2"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/cantora_one"
        android:text="@string/prevent_soft_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.574"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo2"
        android:layout_width="54dp"
        android:layout_height="62dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/logo_prevent_soft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.294"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/psfavico" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="121dp"
        android:layout_height="86dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/home_icon_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/icons8_home" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="logo2,prevent_soft_name2"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="163dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/cantora_one"
        android:text="@string/home_text"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prevent_soft_name2" />

    <Button
        android:id="@+id/btn_forms"
        android:layout_width="173dp"
        android:layout_height="124dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="40dp"
        android:text="@string/home_btn_form"
        android:textAlignment="center"
        android:textSize="11sp"
        app:backgroundTint="#E25E1493"
        app:icon="@drawable/icono_archivoshdpi"
        app:layout_constraintBottom_toTopOf="@+id/btn_prevention"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.954" />

    <Button
        android:id="@+id/btn_recomendations"
        android:layout_width="173dp"
        android:layout_height="124dp"
        android:layout_marginBottom="168dp"
        android:text="@string/home_btn_reco"
        android:textSize="5.9sp"
        app:backgroundTint="#E25E1493"
        app:icon="@drawable/icono_recomendacioneshdpi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toEndOf="@+id/btn_prevention" />

    <Button
        android:id="@+id/btn_prevention"
        android:layout_width="173dp"
        android:layout_height="124dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="168dp"
        android:text="@string/home_btn_prevent"
        android:textSize="8.9sp"
        app:backgroundTint="#E25E1493"
        app:icon="@drawable/icono_prevencionhdpi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_tools"
        android:layout_width="173dp"
        android:layout_height="124dp"
        android:layout_marginBottom="40dp"
        android:text="@string/home_btn_tools"
        android:textAlignment="center"
        android:textSize="7.3sp"
        app:backgroundTint="#E25E1493"
        app:icon="@drawable/icono_herramientashdpi"
        app:layout_constraintBottom_toTopOf="@+id/btn_recomendations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toEndOf="@+id/btn_forms"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.965" />

</androidx.constraintlayout.widget.ConstraintLayout>