<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/forms_toolbar"
        android:layout_width="412dp"
        android:layout_height="47dp"
        android:background="#E25E1493"
        android:minHeight="?attr/actionBarSize"
        android:textAlignment="center"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/btn_new_document"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:title="@string/form_menu_title" />

    <Button
        android:id="@+id/btn_new_document"
        android:layout_width="206dp"
        android:layout_height="124dp"
        android:layout_marginBottom="88dp"
        android:text="@string/form_btn_add"
        android:textSize="18sp"
        app:backgroundTint="#E25E1493"
        app:icon="@drawable/icono_agregar_documentohdpi"
        app:layout_constraintBottom_toTopOf="@+id/btn_edit_document"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_edit_document"
        android:layout_width="206dp"
        android:layout_height="124dp"
        android:layout_marginBottom="80dp"
        android:text="@string/form_btn_edit"
        android:textSize="18sp"
        app:backgroundTint="#E25E1493"
        app:icon="@drawable/icono_editar_archivohdpi"
        app:layout_constraintBottom_toTopOf="@+id/btn_form_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_form_history"
        android:layout_width="206dp"
        android:layout_height="124dp"
        android:layout_marginBottom="88dp"
        android:text="@string/form_btn_history"
        app:backgroundTint="#E25E1493"
        app:icon="@drawable/icono_carpetashdpi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>