<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/prevention_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="800dp">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/prevention_layout_title_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#E25E1493"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="@string/prevention_title"
            app:titleTextColor="#FFFFFF" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/prevention_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways"

            app:tabMode="scrollable">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/prevention_tab_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prevention_tab_1_title" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/prevention_tab_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prevention_tab_2_title" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/prevention_tab_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prevention_tab_3_title" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/prevention_tab_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prevention_tab_4_title" />
        </com.google.android.material.tabs.TabLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/prevention_scroll_view"
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/prevention_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/editTextTextMultiLine2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:text="@string/cov_19_reco"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>